fixed issue with mobile nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
                         </div>
                         <li id="navIcon" onclick="openNavLinks()" class="navIcon"><a href="javascript:void(0);"><i
                                 class="fa fa-bars"></i></a></li>
-                        <div id="mobileNavLinks">
+                        <div id="mobileNavLinks" style="visibility: hidden;">
                                 <li class=""><a href="#contact-anchor">Contact</a></li>
                                 <li class=""><a href="#blog-anchor">Blog</a></li>
                                 <li class=""><a href="#projects-anchor">Projects</a></li>
