--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ ul {
 }
 
 #mobileNavLinks {
-    display: none;
+    display: flex;
     flex-direction: column;
     height: calc(100vh - 50px);
     width: 100%;
