resized mobile nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,10 +43,10 @@
                         <li id="navIcon" onclick="openNavLinks()" class="navIcon"><a href="javascript:void(0);"><i
                                 class="fa fa-bars"></i></a></li>
                         <div id="mobileNavLinks" style="visibility: hidden;">
-                                <li class=""><a href="#contact-anchor">Contact</a></li>
-                                <li class=""><a href="#blog-anchor">Blog</a></li>
-                                <li class=""><a href="#projects-anchor">Projects</a></li>
-                                <li class=""><a href="#about-anchor">About</a></li>
+                                <li><a href="#contact-anchor">Contact</a></li><hr>
+                                <li><a href="#blog-anchor">Blog</a></li><hr>
+                                <li><a href="#projects-anchor">Projects</a></li><hr>
+                                <li><a href="#about-anchor">About</a></li>
                         </div>
                 </ul>
                 <!-- NAV BAR END -->
