fixed mobile nav animation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,13 +42,14 @@
                         </div>
                         <li id="navIcon" onclick="openNavLinks()" class="navIcon"><a href="javascript:void(0);"><i
                                 class="fa fa-bars"></i></a></li>
-                        <div id="mobileNavLinks" style="visibility: hidden;">
-                                <li><a href="#contact-anchor">Contact</a></li><hr>
-                                <li><a href="#blog-anchor">Blog</a></li><hr>
-                                <li><a href="#projects-anchor">Projects</a></li><hr>
-                                <li><a href="#about-anchor">About</a></li>
-                        </div>
+
                 </ul>
+                <div id="mobileNavLinks">
+                        <li onclick="openNavLinks()"><a href="#contact-anchor">Contact</a></li><hr>
+                        <li onclick="openNavLinks()"><a href="#blog-anchor">Blog</a></li><hr>
+                        <li onclick="openNavLinks()"><a href="#projects-anchor">Projects</a></li><hr>
+                        <li onclick="openNavLinks()"><a href="#about-anchor">About</a></li>
+                </div>
                 <!-- NAV BAR END -->
 
                 <!-- ABOUT SECTION -->
