fixed mobile navbar link size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,15 +40,15 @@
                                 <li class="navLink"><a href="#about-anchor">About</a></li>
                                 <li class="navLink active-nav-link"><a href="#">Home</a></li>
                         </div>
-                        <li id="navIcon" onclick="openNavLinks()" class="navIcon"><a href="javascript:void(0);"><i
+                        <li id="navIcon" onclick="toggleNavLinks()" class="navIcon"><a href="javascript:void(0);"><i
                                 class="fa fa-bars"></i></a></li>
 
                 </ul>
                 <div id="mobileNavLinks">
-                        <li onclick="openNavLinks()"><a href="#contact-anchor">Contact</a></li><hr>
-                        <li onclick="openNavLinks()"><a href="#blog-anchor">Blog</a></li><hr>
-                        <li onclick="openNavLinks()"><a href="#projects-anchor">Projects</a></li><hr>
-                        <li onclick="openNavLinks()"><a href="#about-anchor">About</a></li>
+                        <li><a href="#contact-anchor" onclick="toggleNavLinks()">Contact</a></li><hr>
+                        <li><a href="#blog-anchor" onclick="toggleNavLinks()">Blog</a></li><hr>
+                        <li><a href="#projects-anchor" onclick="toggleNavLinks()">Projects</a></li><hr>
+                        <li><a href="#about-anchor" onclick="toggleNavLinks()">About</a></li>
                 </div>
                 <!-- NAV BAR END -->
 
