--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ section {
     flex-direction: column;
 }
 
-ul {
+li {
     list-style-type: none;
 }
 
@@ -190,15 +190,19 @@ ul {
 
 #mobileNavLinks li {
     flex-grow: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
     color: #66FCF1;
 }
 
 #mobileNavLinks a {
     color: #66FCF1;
     text-decoration: none;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .openMobileNavLinks {
