--- a/css/main.css
+++ b/css/main.css
@@ -207,12 +207,14 @@ li {
 
 .openMobileNavLinks {
     top: 50px !important;
-    transition: 500ms;
+    transition: 800ms;
+    -webkit-transition: 800ms;
 }
 
 .closeMobileNavLinks {
     top: -50vh !important;
-    transition: 500ms;
+    transition: 800ms;
+    -webkit-transition: 800ms;
 }
 
 /**************************************************************************************************************************/
